# Smart-BOX

./: .gitignore  README.md
Arduino/: README.md
Arduino/lock_test/: lock_test.ino
Arduino/rfid_test/Arduino/: Arduino.ino
Arduino/smartwadrobearduino/: smartwadrobearduino.ino
FaceRecognition/: DataLoader.py  Networks.py  README.md  main.py  requirements.txt
SmartWardrobeGUI/: .gitignore  CMakeLists.txt  README.md  resources.qrc
SmartWardrobeGUI/data/: wardrobe.db
SmartWardrobeGUI/include/: AppConstants.h  AppModel.h  MainWindow.h  QAddFaceDialog.h  QCameraWidget.h  QDataHandler.h  QFaceInfor.h  QFaceInforWidget.h  QFaceRecognition.h  QWardrobeWidget.h  WardrobeDB.h
SmartWardrobeGUI/plugins/face_detection_plugin/: CMakeLists.txt  CvPluginInterface.h  face_detection_plugin.cpp  face_detection_plugin.h  face_detection_plugin_global.h
SmartWardrobeGUI/src/: AppModel.cpp  MainWindow.cpp  QAddFaceDialog.cpp  QCameraCapture.cpp  QCameraWidget.cpp  QDataHandler.cpp  QFaceInfor.cpp  QFaceInforWidget.cpp  QFaceRecognition.cpp  QWardrobeWidget.cpp  WardrobeDB.cpp  main.cpp
SmartWardrobeGUI/ui/: mainwindow.ui  qaddfacedialog.ui  qcamerawidget.ui  qfaceinforwidget.ui  qwardrobewidget.ui
